update : index.html header 수정

--- a/src/main/resources/static/bootstrap/css/style.css
+++ b/src/main/resources/static/bootstrap/css/style.css
@@ -174,7 +174,7 @@ body.dark-mode {
     color: #FFF;
 }
 
-.card, .navbar, footer {
+.card, footer {
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -205,13 +205,6 @@ body.dark-mode .search-input {
     background-color: #444;
 }
 
-
-/* 기본 네비게이션 바 스타일 */
-.navbar {
-    transition: background-color 0.3s, color 0.3s; /* 부드러운 색상 전환 효과 */
-    background-color: #f8f9fa; /* 기본 라이트 모드 배경색 */
-}
-
 /* 다크 모드에서의 네비게이션 바 스타일 */
 body.dark-mode .navbar {
     background-color: #4f5050 !important; /* 다크 모드에서의 배경색, !important로 우선순위 강제 */
@@ -240,19 +233,6 @@ body.dark-mode .btn-outline-dark {
 body.dark-mode .btn-outline-dark:hover {
     background-color: #555; /* 마우스 오버시 회색 배경 */
     border-color: #fff; /* 흰색 테두리 유지 */
-}
-
-/* 기본 헤더 스타일 */
-header {
-    background-color: #4f5050; !important;/* 라이트 모드의 배경색 */
-    color: #f0f0f0; !important;/* 라이트 모드의 텍스트 색상 */
-    transition: background-color 0.3s, color 0.3s; /* 부드러운 색상 전환 */
-}
-
-/* 다크 모드에서의 헤더 스타일 */
-body.dark-mode header {
-    background-color: #333 !important; /* 다크 모드의 배경색 */
-    color: white !important; /* 다크 모드의 텍스트 색상 */
 }
 
 /* 토글 스위치 기본 스타일 */
@@ -481,3 +461,9 @@ body.dark-mode .list-group-item {
     border-color: #373b3e;
 }
 
+/* 브랜드 이름 */
+.brand-name {
+    font-weight: bold; /* 굵은 폰트 */
+    color: black;
+    text-decoration: none;
+}
