--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -52,7 +52,7 @@
             <textarea class="form-control" id="postContent" rows="6" placeholder="Enter your content" th:field="*{content}"></textarea>
         </div>
         <div class="text-end">
-            <button type="submit" class="btn btn-outline-dark" onclick="return validateForm()">작성</button>
+            <button type="submit" class="btn btn-outline-dark" style="border-radius: 30px" onclick="return validateForm()">작성</button>
         </div><br><br>
     </form>
 
