--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -102,7 +102,8 @@
                         </div>
                         <!-- 기타 요소 -->
                         <div style="margin-left: auto;">
-                            <a href="#" style="text-decoration: none; color: inherit; margin-right: 10px; margin-top: 0px; font-size: 30px">
+                            <a th:onclick="|isSessionExist('@{/like/add/}'+${list.boardNo})|"
+                               style="text-decoration: none; color: inherit; margin-right: 10px; margin-top: 0px; font-size: 30px">
                                 🤝
                             </a>
                         </div>
@@ -170,7 +171,8 @@
                             💙 인기
                         </div>
                         <div style="margin-left: auto;">
-                            <a href="#" style="text-decoration: none; color: inherit; margin-right: 10px; margin-top: 0px; font-size: 30px">
+                            <a th:onclick="|isSessionExist('@{/like/add/}'+${list.boardNo})|"
+                               style="text-decoration: none; color: inherit; margin-right: 10px; margin-top: 0px; font-size: 30px">
                                 🤝
                             </a>
                         </div>
@@ -200,6 +202,5 @@
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Learning_Mate 2024</p></div>
 </footer>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
