--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -51,7 +51,7 @@
 </section>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
-<footer class="py-5 bg-dark">
-    <div class="container" style="margin-bottom: 0px"><p class="m-0 text-center text-white">Copyright &copy; Learning_Mate 2024</p></div>
-</footer>
+<!--<footer class="py-5 bg-dark">-->
+<!--    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Learning_Mate 2024</p></div>-->
+<!--</footer>-->
 </html>
