update : detail.html 대댓글 ui

--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -35,7 +35,7 @@
         <div>
             <h3 style="text-align: left; font-weight: bold;">스터디 소개</h3>
             <hr>
-            <div id="contentBox" th:text="${boardList.content}">Content here</div>
+            <div id="contentBox" th:text="${boardList.content}">콘텐트</div>
             <hr>
         </div><br><br>
         <!-- 댓글 섹션 시작 -->
